log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Fri May 15 06:03:06 PM UTC 2026: 
 tests:  0|6
========================================
f9742b9
Fri May 15 06:05:59 PM UTC 2026: 
 graph.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:32:23: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   32 |     if(grafo == NULL) return;
      |                       ^~~~~~
graph.c:29:8: note: declared here
   29 | Graph* createGraph()
      |        ^~~~~~~~~~~
0cf8cd9
Fri May 15 06:06:52 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
aee3230
